--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.2.2",
     "react-script": "^2.0.5",
     "react-scripts": "^3.4.1",
+    "react-scrollspy-nav": "^1.2.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.2.0"
