--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "promise": "^8.1.0",
+    "react-flip-toolkit": "^7.0.12",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
